--- a/templates/apps/product_detail.html
+++ b/templates/apps/product_detail.html
@@ -79,18 +79,14 @@
                 <div
                         class="project-info-box mt-0"><h5>PRODUCT DETAILS</h5>
                     <p
-                            class="mb-0">Vivamus pellentesque, felis in aliquam ullamcorper, lorem tortor porttitor
-                        erat, hendrerit porta nunc tellus eu lectus. Ut vel imperdiet est. Pellentesque condimentum, dui
-                        et blandit laoreet, quam nisi tincidunt tortor.</p></div>
-                <form action="{% url 'product' %}" method="post">
-               {% csrf_token %}
+                            class="mb-0">{{ product.description }}</p></div>
                 <div
-                        class="project-info-box"><p><b>Client:</b> CUPCAKE CO</p>
-                    <p><b>Date:</b> 14.02.2020</p>
+                        class="project-info-box"><p><b>Product:</b> {{ product.name }}</p>
+                    <p><b>Date:</b> {{ product.created_at|date:'Y-m-d H:i' }}</p>
                     <p><b>Designer:</b> James Doe</p>
                     <p><b>Tools:</b> Illustrator</p>
                     <p
-                            class="mb-0"><b>Budget:</b> $500</p></div>
+                            class="mb-0"><b>Budget:</b> {{ product.price }}</p></div>
                 <div
                         class="project-info-box mt-0 mb-0"><p
                         class="mb-0"> <span
@@ -103,13 +99,12 @@
                         class="fab fa-pinterest"></i></a> <a
                         href="#x" class="btn btn-xs btn-linkedin btn-circle btn-icon mr-5 mb-0"><i
                         class="fab fa-linkedin-in"></i></a></p></div>
-                </form>
             </div>
             <div
                     class="col-md-7"><img
-                    src="https://www.bootdey.com/image/400x300/FFB6C1/000000" alt="project-image" class="rounded">
+                    src="{{ product.images.first.image.url }}" alt="project-image" class="rounded">
                 <div
-                        class="project-info-box"><p><b>Categories:</b> Design, Illustration</p>
+                        class="project-info-box"><p><b>Categories:</b> {{ product.category.name }}</p>
                     <p><b>Skills:</b> Illustrator</p></div>
             </div>
         </div>
