--- a/templates/apps/register.html
+++ b/templates/apps/register.html
@@ -47,42 +47,42 @@
 
     <div class="jumbotron text-center" style="min-height:400px;height:auto;">
         <div class="col-md-10 col-md-offset-2">
-           <form action="{% url 'register' %}" method="post">
-               {% csrf_token %}
+            <form action="{% url 'register' %}" method="post">
+                {% csrf_token %}
 
-            <div class="form-group text-center">
-                <div class="col-sm-10 reg-icon">
-                    <span class="fa fa-user fa-3x">Sign up</span>
+                <div class="form-group text-center">
+                    <div class="col-sm-10 reg-icon">
+                        <span class="fa fa-user fa-3x">Sign up</span>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="Name">
+                <div class="form-group">
+                    <div class="col-sm-10">
+                        <input type="text" id="first_name" name="first_name" placeholder="Name">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <div class="form-group">
+                    <div class="col-sm-10">
+                        <input type="email" id="email" name="email" placeholder="Email">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="Username" placeholder="Username">
+                <div class="form-group">
+                    <div class="col-sm-10">
+                        <input type="text" id="Username" name="username" placeholder="Username">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                <div class="form-group">
+                    <div class="col-sm-10">
+                        <input type="password" id="password" name="password" placeholder="Password">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-10">
-                    <button type="submit" class="btn btn-info">
-                        <span class="glyphicon glyphicon-share-alt"></span>
-                        Register
-                    </button>
+                <div class="form-group">
+                    <div class="col-sm-10">
+                        <button type="submit" class="btn btn-info">
+                            <span class="glyphicon glyphicon-share-alt"></span>
+                            Register
+                        </button>
+                    </div>
                 </div>
-            </div>
             </form>
         </div>
     </div>
